update applied 10-09-2025-index-style

--- a/index.html
+++ b/index.html
@@ -12,109 +12,82 @@
 </head>
 <body>
 
-    <div class="header"> 
-      <div class="head-container">
-        <div class="logo-area">
-            <img id="logo" src="./images/logo.svg">
-            <span class="logo-text">
-                판다마켓
-            </span>
-        </div>
-        <div class="center-space">
-            <a href="./sign-in.html"><div class="login-button">
-                로그인
-            </div></a>
-        </div>
-      </div>
+    <header>
+        <a href="/"><img src="./images/panda_logo.svg" width="153"></a>
+        <a href="./sign-in.html" id="loginLinkButton" class="button">로그인</a>
+    </header>
+
+    <main>
+
+    <!-- 
+    1.<section></section> tag 내에 id(hero)로 background-image를 주고, 
+       banner 클래스에 #id로 준 background-image의 속성들을 설정한다.
+    2.내부에 div tag에 wrapper 클래스로 
+        
+    //-->
+
+    <section id="hero" class="banner"> 
+    <div class="wrapper">
+        <h1>일상의 모든 물건을 거래해 보세요.</h1>
+        <a href="./items.html" class="button pill-button">구경하러 가기</a>
     </div>
+    </section>
 
 
-    <div class="slide-container">
-        <div class="content-area">
-            <div class="slider_inner_div">
-                <div class="text-area">
-                    <div class="text-area-title">
-                        일상의 모든 물건을 거래해 보세요.
-                    </div>
-                    <div class="trade-button">
-                        <a href="./items.html">구경하러 가기</a>
-                    </div>
-                </div>
-                <div class="Panda_img">
-                    <img src="./images/panda.svg" alt="Panda Image">
-                </div>
+    <section id="features" class="wrapper">
+
+        <div class="feature">
+            <img src="./images/img_home_01.svg" width="50%" />
+            <div class="feature-content">
+                <h2 class="feature-tag">Hot item</h2>
+                <h1>인기 상품을 확인해 보세요.</h1>
+                <p class="feature-description">
+                    가장 HOT한 중고거래 물품을 판다마켓에서 확인해 보세요.
+                </p>
             </div>
         </div>
-    </div>
 
-    <div class="hot-item-container">
-        <div class="hot-item-area">
-            <div class="home_img01">
-                <img src="./images/img_home_01.svg" alt="home_img01">
+        <div class="feature">
+            <div class="feature-content">
+                <h2 class="feature-tag">Search</h2>
+                <h1>구매를 원하는 상품을 검색하세요.</h1>
+                <p class="feature-description">구매하고 싶은 물품은 검색해서 쉽게 찾아보세요.</p>
             </div>
-            <div class="hot-item-text-area">
-                <span class="hot-item-text-area1">Hot Item</span>
-                <span class="hot-item-text-area2">인기 상품을 확인해 보세요.</span>
-                <span class="hot-item-text-area3">가장 HOT한 중고거래 물품을 판다 마켓에서 확인해 보세요</span>
+            <img src="./images/search_img_01.svg" width="50%"/>
+        </div>
+
+        <div class="feature">
+            <img src="./images/img_sell_03.svg" width="50%" />
+            <div class="feature-content">
+                <h2 class="feature-tag">Register</h2>
+                <h1>판매를 원하는 상품을 등록하세요.</h1>
+                <p class="feature-description">
+                    어떤 물건이든 판매하고 싶은 상품을 쉽게 등록하세요.
+                </p>
             </div>
         </div>
-    </div>
 
-    <div class="search-item-container">
-        <div class="search-item-area">
-            <div class="search-text-area">
-                <span class="search-item-text-area1">Search</span>
-                <span class="search-item-text-area2">구매를 원하는 상품을 검색하세요.</span>
-                <span class="search-item-text-area3">구매하고 싶은 물품은 검색해서 쉽게 찾아보세요.</span>
-            </div>
-            <div class="search-item_img01">
-                <div class="search_img01">
-                    <img src="./images/search_img_01.svg" alt="search_img01">
-                </div>
-            </div>
+    </section>
+
+    <section id="bottomBanner" class="banner">
+        <div class="wrapper">
+            <h1>믿을 수 있는 판다마켓 중고거래</h1>
         </div>
-    </div>
+    </section>
 
-    <div class="sell-item-container">
-        <div class="sell-item-area">
-            <div class="sell_img01">
-                <img src="./images/img_sell_03.svg" alt="sell_img01">
-            </div>
-            <div class="sell-item-text-area">
-                <span class="sell-item-text-area1">Register</span>
-                <span class="sell-item-text-area2">판매를 원하는  상품을 등록하세요.</span>
-                <span class="sell-item-text-area3">어떤 물건이든 판매하고 싶은 상품을쉽게 등록하세요.</span>
-            </div>
+    <footer>
+        <div>@codeit -2024</div>
+        <div id="footerMenu">
+            <a href="./privacy.html">Privacy Policy</a>
+            <a href="./faq.html">FAQ</a>
         </div>
-    </div>
-
-
-    <div class="footer-container">
-        <div class="footer_inner_div">
-            <div class="footer-text-area">
-                믿을수 있는 판다마켓 중고거래
-            </div>
-            <div class="footer_img01">
-                <img src="./images/img_home_footer.svg" alt="Panda Image">
-            </div>
+        <div id="socialMedia">
+            <a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook-logo.svg" width="20" /></a>
+            <a href="https://www.twitter.com/" target="_blank"><img src="./images/twitter-logo.svg" width="20" /></a>
+            <a href="https://www.youtube.com" target="_blank"><img src="./images/youtube-logo.svg" width="20" /></a>
+            <a href="https://www.instagram" target="_blank"><img src="./images/instagram-logo.svg" width="20" /></a>
         </div>
-    </div>
-
-    <div class="copyright-container">
-        <div class="copyright_inner_div">
-            <div class="cp-text-area">
-                ©codeit - 2024
-            </div>
-            <div class="privacy-faq">
-                <a href="./privacy.html"><span>Privacy Policy</span></a>
-                <a href="./faq.html"><span>FAQ</span></a>
-            </div>
-            <div class="sns_icons">
-                <img src="./images/sns_icons.svg" alt="SNS ICONS">
-            </div>
-        </div>
-    </div>
-
+    </footer>
 
 </body>
 </html>
