--- a/sign-in.html
+++ b/sign-in.html
@@ -3,45 +3,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Sign In</title>
-    <link rel="stylesheet" href="./css/sign-in.css">
+    <link rel="stylesheet" href="./css/sign-in-and-up.css">
 </head>
 <body>
-    <div class="main-container">
 
-        <div class="logo-text-area">
-            <a href="./"><img class="top-logo-img" src="./images/logo-big-login.svg"></a>
-            <span class="logo-title">판다마켓</span>
-        </div>
-        
-        <div class="login-window">
-
-            <form>
-            <label for="username">이메일</label>
-            <input id="username" name="email" placeholder="이메일을 입력하세요." required>
-            <label for="password">비밀번호</label>
-            <div class="inputPWD">
-                <input id="passwordInput" name="password" type="password" placeholder="비밀번호를 입력하세요." required>
-                <img class="fa-eye" src="./images/fa-eye.svg">
-            </div>
-            <button>로그인</button>
-            </form>
-
-            <div class="outerbox-simple-login">
-                <div class="simple_login">
-                    <span class="simple-login-text">간편 로그인하기</span>
-                    <div class="sns-icons">
-                        <a href="https://google.com" target="_blank"><img class="google-login" src="./images/google_button.svg"></a>
-                        <a href="https://www.kakaocorp.com/page/" target="_blank"><img class="kakao-login" src="./images/kakao-button.svg"></a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="signup-text">
-            <span class="question">판다마켓이 처음이신가요?</span>
-            <a href="./sign-up.html"><span class="signup">회원가입</span></a>
-        </div>
+<header>
+    <div class="logo-container">
+        <a href="/"><img class="logo-img" src="./images/Panda_logo-login.svg" alt="판다마켓"></a>
     </div>
+</header>
+
+<main>
+    <form method="post">
+        <label for="username">이메일</label>
+        <input id="username" name="email" placeholder="이메일을 입력하세요." required>
+        <label for="password">비밀번호</label>
+        <div class="inputPWD">
+            <input id="passwordInput" name="password" type="password" placeholder="비밀번호를 입력하세요." required>
+            <img class="fa-eye" src="./images/fa-eye.svg" alt="비밀번호 보기">
+        </div>
+        <button type="submit" aria-label="로그인 하기">로그인</button>
+    </form>
+</main>
+
+<div class="footerLogin">
+    간편 로그인하기
+    <div class="social-login-button">
+        <a href="https://www.google.com/" target="_blank"><img src="./images/google_button.svg" width="42"/></a>
+        <a href="https://www.kakaocorp.com/page/" target="_blank"><img src="./images/kakao-button.svg" width="42"/></a>
+    </div>
+</div>
+
+<footer>
+    판다마켓이 처음이신가요? <a href="./sign-up.html">회원가입</a>
+</footer>
+
+
 </body>
 </html>
