sign-in page has been updated

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- 
     1.<section></section> tag 내에 id(hero)로 background-image를 주고, 
        banner 클래스에 #id로 준 background-image의 속성들을 설정한다.
-    2.내부에 div tag에 wrapper 클래스로 
+    2.내부에 div tag에 wrapper 클래스로 공통적으로 사용될 속성들을 설정한다.
         
     //-->
 
