update sign-in-and-up.css and style.css to apply responsiveness

--- a/sign-in.html
+++ b/sign-in.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Sign In</title>
     <link rel="stylesheet" href="./css/sign-in-and-up.css">
-    <script lang="javascript" src="./js/validLogin.js"></script>
+    <script lang="javascript" src="./js/validate.js"></script>
 </head>
 <body>
 
@@ -13,7 +13,7 @@
     <div class="logo-container">
         <a href="/"><img class="logo-img" src="./images/Panda_logo-login.svg" alt="판다마켓"></a>
     </div>
-    <form method="post" name="sign-in">
+    <form method="post">
 
         <label for="username">이메일</label>
         <input id="username" name="email" placeholder="이메일을 입력하세요.">
