--- a/sign-up.html
+++ b/sign-up.html
@@ -14,7 +14,7 @@
         <a href="/"><img class="logo-img" src="./images/Panda_logo-login.svg" alt="판다마켓"></a>
     </div>
 
-    <form method="post" name="register">
+    <form method="post">
         <label for="username">이메일</label>
         <input id="username" name="email" placeholder="이메일을 입력하세요.">
         <div id="emailError" class="error-message"></div>
