update validate.js to concise code

--- a/sign-in.html
+++ b/sign-in.html
@@ -26,7 +26,7 @@
         </div>
         <div id="passwordError" class="error-message"></div>
 
-        <button type="submit" aria-label="로그인 하기">로그인</button>
+        <button type="submit" id="submitButton" aria-label="로그인 하기">로그인</button>
     </form>
 
     <div class="socialLogin">
