update sign-in.html moving js script from head to body

--- a/sign-in.html
+++ b/sign-in.html
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Sign In</title>
     <link rel="stylesheet" href="./css/sign-in-and-up.css">
-    <script lang="javascript" src="./js/validate.js"></script>
 </head>
 <body>
 
@@ -43,7 +42,6 @@
 
 </main>
 
-
-
+<script src="./js/validate.js"></script>
 </body>
 </html>
