update login page js file

--- a/sign-in.html
+++ b/sign-in.html
@@ -42,6 +42,14 @@
 
 </main>
 
+<!-- Modal for error messages -->
+<div id="errorModal" class="modal">
+    <div class="modal-content">
+        <p id="modalMessage">비밀번호가 일치하지 않습니다.</p>
+        <button id="modalOk" class="modal-btn">확인</button>
+    </div>
+</div>
+
 <script src="./js/validate.js"></script>
 </body>
 </html>
